Fix event handler name not visible in darkmode (#844)
* Fix event handler name not visible in darkmode

* Add filter property for dark and light colors

* Add class next to .theme-dark for darkmode

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -2188,3 +2188,11 @@ input[type='text'] {
 .draggable-box:focus-within {
   z-index: 2 !important;
 }
+
+.theme-dark .event-action {
+  filter: brightness(0) invert(1);
+}
+
+.event-action{
+  filter: brightness(0) invert(0);
+}
